<resources>
    <string name="app_name">MenuAppPrueba</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="_120_cm">120 cm</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculateImc">Calcular IMC</string>
    <string name="resoultImc">Tu resultado</string>
    <string name="Recalcular">Recalcular IMC</string>
    <string name="error">Error</string>

    <string name="title_bajo_peso">Peso Bajo</string>
    <string name="description_bajo_peso">Estas por debajo de lo optimo para tu peso y altura</string>

    <string name="title_normal">Normal</string>
    <string name="description_normal">Estas en lo optimo para tu peso y altura</string>

    <string name="title_sobre_peso">Sobre peso</string>
    <string name="description_sobre_peso">Estas por encima de lo optimo para tu peso y altura</string>

    <string name="title_obecidad">Obecidad</string>
    <string name="description_obecidad">Estas muy por encima de lo optimo para tu peso y altura</string>

    <string name="bienvenido_todo_app">Bienvenido DeyvisDev</string>
    <string name="todo_categories">Categorias:</string>
    <string name="todo_tasks">Tareas:</string>
    <string name="add_task">Añade la tarea</string>
    <string name="rvBusiness">Negocios</string>
    <string name="rb_personal">Personal</string>
    <string name="rb_otros">Otros</string>
    <string name="create_task">Crear Tarea</string>
</resources>