<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:orientation="vertical"
    android:background="@color/todo_background_todo_app"
    android:layout_height="wrap_content"
    android:padding="16dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTask"
        android:backgroundTint="@color/white"
        android:hint="@string/add_task"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        />
    <RadioGroup
        android:id="@+id/rbCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rvBusiness"
            android:checked="true"
            android:textColor="@color/white"
            android:buttonTint="@color/todo_business_category"/>
        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_personal"
            android:checked="false"
            android:textColor="@color/white"
            android:buttonTint="@color/todo_personal_category"/>
        <RadioButton
            android:id="@+id/rbOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_otros"
            android:checked="false"
            android:textColor="@color/white"
            android:buttonTint="@color/todo_other_category"/>
    </RadioGroup>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnAddTask"
        android:backgroundTint="@color/todo_accent"
        android:text="@string/create_task"/>


</LinearLayout>